treure el index del back

--- a/01-backend-adminPro/public/index.html
+++ b/01-backend-adminPro/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <title>Google Sign In</title>
 </head>
 <body>
-    <!--https://developers.google.com/identity/gsi/web/guides/display-button?hl=en#javascript-->
+    https://developers.google.com/identity/gsi/web/guides/display-button?hl=en#javascript
     <h1>Google Sign In:</h1>
     <div id="buttonDiv"></div> 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
@@ -39,4 +39,4 @@
         }
     </script>
 </body>
-</html>
+</html>-->
